Fix writing alternate config files